Added security config and post for users