@@ -4,6 +4,6 @@ import java.util.NoSuchElementException;
 
 public class UserNotFoundException extends NoSuchElementException {
     public UserNotFoundException(String identifierName) {
-        super("User with email %s is not found".formatted(identifierName));
+        super(String.format("User with email %s is not found", identifierName));
     }
 }
